front-end-components/src/index.css
.full-height-width {
  width: 100%;
  height: 100%;
}

/* start recharts */

/* active colour is 9% darker */
.recharts-wrapper,
.chart-stat-wrapper {
  --grid-colour: #f0f0f0;
  --label-colour: #8c8c8c;
  --series-0-colour: #bfbfbf;
  --series-0-active-colour: #aeaeae;
  --series-1-colour: #4c2c92;
  --series-1-active-colour: #452885;
  --series-2-colour: #28a197;
  --series-2-active-colour: #249289;
  --stack-0-colour: var(--series-0-colour);
  --stack-0-active-colour: var(--series-0-active-colour);
  --stack-1-colour: #e6e6e6;
  --stack-1-active-colour: #d1d1d1;
  --series-highlight-colour: #12436d;
  --link-colour: #1d70b8;
  --link-hover-colour: #003078;
  --table-grid-colour: #b1b4b6;
  --focus-colour: #fd0;
}

.recharts-wrapper .chart-cell,
.recharts-wrapper .chart-cell.chart-cell-series-0,
.recharts-wrapper .recharts-legend-item.legend-item-0 path {
  fill: var(--series-0-colour);
}

.recharts-wrapper .chart-cell.chart-cell-highlight {
  fill: var(--series-highlight-colour);
}

.recharts-wrapper .chart-cell.chart-cell-active:not(.chart-cell-highlight) {
  fill: var(--series-0-active-colour);
}

.recharts-wrapper .recharts-cartesian-axis,
.recharts-wrapper .recharts-cartesian-axis .recharts-cartesian-axis-line,
.recharts-wrapper .recharts-cartesian-axis .recharts-cartesian-axis-tick-line {
  stroke: var(--grid-colour);
}

.recharts-wrapper .recharts-cartesian-axis .recharts-text,
.recharts-wrapper .recharts-reference-line .recharts-text {
  fill: var(--label-colour);
  stroke: none;
}

.recharts-wrapper .recharts-cartesian-axis.recharts-yAxis > .recharts-label {
  text-anchor: middle;
}

.recharts-wrapper .recharts-legend-item .recharts-legend-item-text {
  color: var(--label-colour);
}

.recharts-wrapper .chart-cell.chart-cell-series-1,
.recharts-wrapper .recharts-legend-item.legend-item-1 path {
  fill: var(--series-1-colour);
}

.recharts-wrapper
  .chart-cell.chart-cell-series-1.chart-cell-active:not(.chart-cell-highlight) {
  fill: var(--series-1-active-colour);
}

.recharts-wrapper .chart-cell.chart-cell-series-2,
.recharts-wrapper .recharts-legend-item.legend-item-2 path {
  fill: var(--series-2-colour);
}

.recharts-wrapper
  .chart-cell.chart-cell-series-0.chart-cell-stack-1:not(
    .chart-cell-highlight
  ) {
  fill: var(--stack-0-colour);
}

.recharts-wrapper
  .chart-cell.chart-cell-series-0.chart-cell-stack-1.chart-cell-active:not(
    .chart-cell-highlight
  ) {
  fill: var(--stack-0-active-colour);
}

.recharts-wrapper .chart-cell.chart-cell-series-1.chart-cell-stack-1 {
  fill: var(--stack-1-colour);
}

.recharts-wrapper
  .chart-cell.chart-cell-series-1.chart-cell-stack-1.chart-cell-active {
  fill: var(--stack-1-active-colour);
}

.recharts-wrapper
  .chart-cell.chart-cell-series-2.chart-cell-active:not(.chart-cell-highlight) {
  fill: var(--series-2-active-colour);
}

.recharts-wrapper .recharts-cartesian-grid line {
  stroke: var(--grid-colour);
}

.recharts-wrapper .chart-line.chart-line-series-0 path,
.recharts-wrapper .chart-line.chart-line-series-0 .recharts-line-dot,
.recharts-wrapper .recharts-default-legend .legend-item-0 line {
  stroke: var(--series-highlight-colour);
  stroke-width: 5;
}

.recharts-wrapper .chart-line.chart-line-series-1 path,
.recharts-wrapper .chart-line.chart-line-series-1 .recharts-line-dot,
.recharts-wrapper .recharts-default-legend .legend-item-1 line {
  stroke: var(--series-1-colour);
  stroke-width: 5;
}

.recharts-wrapper .recharts-default-legend .recharts-legend-item-text {
  color: var(--label-colour) !important;
}

.recharts-wrapper .chart-active-dot.chart-active-dot-series-0,
.recharts-wrapper .recharts-label-list .chart-label-series-0 {
  fill: var(--series-highlight-colour);
}

.recharts-wrapper .chart-active-dot.chart-active-dot-series-1,
.recharts-wrapper .recharts-label-list .chart-label-series-1 {
  fill: var(--series-1-colour);
}

.recharts-wrapper .chart-active-tooltip {
  background-color: rgba(255, 255, 255, 0.8);
  padding: 10px;
  border-radius: 20px;
}

.recharts-wrapper .chart-active-tooltip > p {
  margin: 0;
}

#budget-forecast-returns .recharts-wrapper .recharts-legend-wrapper {
  top: 0 !important;
}

.chart-stat abbr.summary {
  text-decoration: underline;
  text-decoration-style: dotted;
}

.chart-stat-wrapper .chart-stat-value {
  border-top: 1px solid var(--label-colour);
  margin-top: 0.5rem;
}

.chart-stat-summary {
  display: grid;
  grid-template-columns: calc(calc(100% - 30px) / 3) calc(calc(100% - 30px) / 3) calc(
      calc(100% - 30px) / 3
    );
  margin-top: 14px;
  padding: 0;
  gap: 15px;
  width: 100%;
}

.chart-stat-summary .chart-stat-wrapper {
  background-color: var(--grid-colour);
  padding: 10px;
}

.chart-stat-summary .chart-stat-wrapper .chart-stat-value {
  border-top: none;
  margin-top: 0.1rem;
  margin-bottom: 0.1rem;
  overflow-wrap: break-word;
}

.chart-stat-wrapper.chart-stat-line-chart .chart-stat-value {
  color: var(--series-highlight-colour);
}

.chart-stat-summary
  .chart-stat-wrapper
  .chart-stat-value
  .chart-stat-value-suffix {
  color: var(--label-colour);
  margin-left: 5px;
  font-size: 0.38em;
}

.chart-stat-wrapper.chart-stat-highlight {
  color: var(--series-highlight-colour);
}

.chart-stat-wrapper.chart-stat-highlight .chart-stat-value {
  font-weight: 700;
}

.chart-stat-wrapper .govuk-body-s,
.chart-stat-wrapper .govuk-body-m,
.chart-stat-wrapper .govuk-body-l {
  color: inherit;
}

.composed-container {
  min-height: 335px;
}

.composed-chart-wrapper {
  height: 100%;
}

.composed-chart-wrapper,
.composed-chart {
  height: 200px;
}

.composed-chart-wrapper,
.composed-chart > div {
  height: 100%;
}

.recharts-wrapper .recharts-cartesian-axis .recharts-text .govuk-link {
  fill: var(--link-colour);
}

.recharts-wrapper .recharts-cartesian-axis .recharts-text .govuk-link:hover,
.recharts-wrapper .recharts-cartesian-axis .recharts-text .govuk-link:focus {
  fill: var(--link-hover-colour);
  text-decoration: underline;
}

.recharts-wrapper .recharts-cartesian-axis .recharts-text.establishment-tick {
  transform: translate(-0.1em, 0.3em);
}

.recharts-wrapper
  .recharts-cartesian-axis
  line.establishment-tick-focus:has(~ text > a) {
  stroke: transparent;
  stroke-width: 1.5em;
}

.recharts-wrapper
  .recharts-cartesian-axis
  line.establishment-tick-focus:has(~ text > a:focus) {
  stroke: var(--focus-colour);
}

.recharts-wrapper .recharts-tooltip-cursor {
  fill: var(--grid-colour);
}

.recharts-wrapper .recharts-tooltip-wrapper {
  background-color: #fff;
  border: 1px solid var(--table-grid-colour);
}

.recharts-wrapper .recharts-tooltip-wrapper .tooltip-table {
  margin-bottom: 0;
}

.recharts-wrapper .recharts-tooltip-wrapper .tooltip-table > tbody {
  font-size: 0.8em;
}

.recharts-wrapper .recharts-tooltip-wrapper .tooltip-table > caption {
  margin-top: 10px;
  margin-bottom: 10px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.recharts-wrapper
  foreignObject
  > .recharts-tooltip-wrapper
  .tooltip-table
  > caption {
  width: 370px;
  overflow: visible;
  white-space: pre-wrap;
}

.recharts-wrapper
  .recharts-tooltip-wrapper
  .tooltip-table
  > tbody
  .govuk-table__row
  > th {
  width: 150px;
}

.recharts-wrapper .recharts-tooltip-wrapper .tooltip-table > caption,
.recharts-wrapper
  .recharts-tooltip-wrapper
  .tooltip-table
  > tbody
  .govuk-table__row
  > th,
.recharts-wrapper
  .recharts-tooltip-wrapper
  .tooltip-table
  > tbody
  .govuk-table__row
  > td {
  padding-left: 10px;
  padding-right: 10px;
}

.recharts-wrapper
  .recharts-tooltip-wrapper
  .tooltip-table
  > tbody
  .govuk-table__row:first-child
  > th,
.recharts-wrapper
  .recharts-tooltip-wrapper
  .tooltip-table
  > tbody
  .govuk-table__row:first-child
  > td {
  border-top: 1px solid var(--table-grid-colour);
}

.recharts-wrapper
  .recharts-tooltip-wrapper
  .tooltip-table
  > tbody
  .govuk-table__row:last-child
  > th,
.recharts-wrapper
  .recharts-tooltip-wrapper
  .tooltip-table
  > tbody
  .govuk-table__row:last-child
  > td {
  border-bottom: none;
}

.recharts-wrapper .recharts-reference-line > line {
  stroke: var(--grid-colour);
}

.recharts-wrapper tspan::selection {
  background-color: var(--grid-colour);
}

.recharts-wrapper.recharts-wrapper-horizontal-bar-chart > .recharts-surface {
  overflow: visible;
}

/* end recharts */

.suggest-input {
  position: relative;
}

.suggest-form-group ul {
  position: absolute;
  height: auto;
  box-sizing: border-box;
  border: 2px solid;
  border-top: 0;
  padding: 3px 0;
  z-index: 3;
  background: #fff;
  list-style-type: none;
}

.suggest-form-group input {
  padding-right: 36px;
}

.suggest-form-group a {
  text-decoration: none;
  padding: 8px 11px;
  display: block;
  color: #000;
  box-shadow: none;
}

.suggest-form-group a.active {
  background: lightgray;
}

.chart-options {
  display: grid;
  grid-template-columns: 75% 25%;
  width: 100%;
}

.trust-options {
  grid-template-columns: 50% 50%;
  padding-bottom: 0;
  margin-bottom: 30px;
}

@media (max-width: 640px) {
  .chart-options {
    width: 100%;
    display: block;
  }
}

ul.autocomplete__menu {
  font-family: "GDS Transport";
}

